--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@ text-align: left;
 <body>
     <div class="topnav" id="myTopnav">
         <a class="active" style="background-color: black"><img src="https://github.com/greeenCloud/fenix/blob/main/logo.png?raw=true"></a>
-        <a href="fenix.html" class="active" style="background-color: #004d00;">Početna</a>
-        <a href="oNama.html" target="_blank">O nama</a>
-        <a href="usluge.html" target="_blank">Usluge</a>
-        <a href="kontakt.html" target="_blank">Kontakt</a>
-        <a href="galerija.html" target="_blank">Galerija</a><br>
-        <a href="" title="Slovakian" target="_blank"><img src="https://github.com/greeenCloud/fenix/blob/main/slovakia.jpg?raw=true" class="w3-circle"></a>
-        <a href="" title="Russian" target="_blank"><img src="https://github.com/greeenCloud/fenix/blob/main/russian.jpg?raw=true" class="w3-circle"></a>
-        <a href="" title="English" target="_blank"><img src="https://github.com/greeenCloud/fenix/blob/main/english.jpg?raw=true" class="w3-circle"></a>
+        <a href="https://greeencloud.github.io/fenix/index.html" class="active" style="background-color: #004d00;">Početna</a>
+        <a href="https://greeencloud.github.io/fenix/oNama.html">O nama</a>
+        <a href="https://greeencloud.github.io/fenix/usluge.html">Usluge</a>
+        <a href="https://greeencloud.github.io/fenix/kontakt.html">Kontakt</a>
+        <a href="index.html">Galerija</a><br>
+        <a href="" title="Slovakian"><img src="https://github.com/greeenCloud/fenix/blob/main/slovakia.jpg?raw=true" class="w3-circle"></a>
+        <a href="" title="Russian"><img src="https://github.com/greeenCloud/fenix/blob/main/russian.jpg?raw=true" class="w3-circle"></a>
+        <a href="" title="English"><img src="https://github.com/greeenCloud/fenix/blob/main/english.jpg?raw=true" class="w3-circle"></a>
         <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a></div>
     <div class="w3-row w3-center w3-content"><br><br>
         <div class="w3-half">
