--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ text-align: left;
   <h3 class="w3-border-top w3-border-bottom w3-border-brown">Kolektiv Doma sa korisnicima</h3><br>
   <div class="w3-third">
     <div class="w3-card">
-      <img class="materialbox materialboxed" src="galerijaFenix/01-korisnici.jpg" style="width:100%">
+      <img class="materialbox materialboxed" src="01-korisnici.jpg" style="width:100%">
     </div>
   </div>
 
