--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
-
-<!DOCTYPE html>
+  
+  <!DOCTYPE html>
 <html lang="en">
   
 
@@ -14,6 +14,7 @@
     <link href="styles/default.css" rel="stylesheet">
     <link href="styles/custom.css" rel="stylesheet">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="icon" href="favicon.png">
 
 
 
@@ -80,11 +81,11 @@ img {
 <body>
     <div class="topnav" id="myTopnav">
         <a class="active" style="background-color: black"><img src="https://github.com/greeenCloud/fenix/blob/main/logo.png?raw=true"></a>
-        <a href="https://greeencloud.github.io/fenix/" class="active" style="background-color: #004d00;">Početna</a>
-        <a href="https://greeencloud.github.io/fenix/oNama.html">O nama</a>
-        <a href="https://greeencloud.github.io/fenix/usluge.html">Usluge</a>
-        <a href="https://greeencloud.github.io/fenix/kontakt.html">Kontakt</a>
-        <a href="https://greeencloud.github.io/galerijaFenix/">Galerija</a><br>
+        <a href="fenix.html" class="active" style="background-color: #004d00;">Početna</a>
+        <a href="oNama.html">O nama</a>
+        <a href="usluge.html">Usluge</a>
+        <a href="kontakt.html">Kontakt</a>
+        <a href="galerija.html">Galerija</a><br>
         <a href="" title="Slovakian"><img src="https://github.com/greeenCloud/fenix/blob/main/slovakia.jpg?raw=true" class="w3-circle"></a>
         <a href="" title="Russian"><img src="https://github.com/greeenCloud/fenix/blob/main/russian.jpg?raw=true" class="w3-circle"></a>
         <a href="" title="English"><img src="https://github.com/greeenCloud/fenix/blob/main/english.jpg?raw=true" class="w3-circle"></a>
@@ -236,19 +237,19 @@ img {
   
     <div class="w3-quarter">
       <div class="w3-card-4">
-        <img class="materialbox materialboxed" src="DSC_2267.jpg" style="width:100%; margin-top: 50%">
+        <img class="materialbox materialboxed" src="DSC_2267.jpg" style="width:100%; margin-top: 15%">
       </div>
     </div>
 
     <div class="w3-quarter">
       <div class="w3-card-4">
-        <img class="materialbox materialboxed" src="DSC_2280.jpg" style="width:100%; margin-top: 50%">
+        <img class="materialbox materialboxed" src="DSC_2280.jpg" style="width:100%; margin-top: 15%">
       </div>
     </div>
 
     <div class="w3-quarter">
       <div class="w3-card-4">
-        <img class="materialbox materialboxed"src="DSC_2274.jpg" style="width:100%; margin-top: 50%">
+        <img class="materialbox materialboxed"src="DSC_2274.jpg" style="width:100%; margin-top: 15%">
       </div>
     </div>
 
@@ -293,7 +294,7 @@ img {
 
    <div class="w3-quarter">
       <div class="w3-card-4">
-        <img class="materialbox materialboxed" src="06-dvoriste.jpg" style="width:100%; margin-top: 50%">
+        <img class="materialbox materialboxed" src="06-dvoriste.jpg" style="width:100%; margin-top: 15%">
       </div>
     </div>
   </div>
@@ -449,7 +450,7 @@ img {
 
   <div class="w3-quarter">
     <div class="w3-card-4">
-      <img class="materialbox materialboxed" src="01-kupatilo.jpg" style="width:100%; margin-top: 50%">
+      <img class="materialbox materialboxed" src="01-kupatilo.jpg" style="width:100%; margin-top: 15%">
     </div>
   </div>
 
@@ -461,13 +462,13 @@ img {
 
   <div class="w3-quarter">
     <div class="w3-card-4">
-      <img class="materialbox materialboxed" src="03-kupatilo-rehabilitacija.jpg" style="width:100%; margin-top: 50%">
+      <img class="materialbox materialboxed" src="03-kupatilo-rehabilitacija.jpg" style="width:100%; margin-top: 15%">
     </div>
   </div>
 
   <div class="w3-quarter">
     <div class="w3-card-4">
-      <img class="materialbox materialboxed"src="04-kupatilo-rehabilitacija.jpg" style="width:100%; margin-top: 50%">
+      <img class="materialbox materialboxed"src="04-kupatilo-rehabilitacija.jpg" style="width:100%; margin-top: 15%">
     </div>
   </div>
 </div>
@@ -485,19 +486,19 @@ img {
 
   <div class="w3-quarter">
     <div class="w3-card-4">
-      <img class="materialbox materialboxed"src="02-trpezarija.jpg" style="width:100%; margin-top: 50%">
+      <img class="materialbox materialboxed"src="02-trpezarija.jpg" style="width:100%; margin-top: 15%">
     </div>
   </div>
 
   <div class="w3-quarter">
     <div class="w3-card-4">
-      <img class="materialbox materialboxed" src="03-trpezarija.jpg" style="width:100%; margin-top: 50%">
+      <img class="materialbox materialboxed" src="03-trpezarija.jpg" style="width:100%; margin-top: 15%">
     </div>
   </div>
 
   <div class="w3-quarter">
     <div class="w3-card-4">
-      <img class="materialbox materialboxed"src="04-trpezarija.jpg" style="width:100%; margin-top: 50%">
+      <img class="materialbox materialboxed"src="04-trpezarija.jpg" style="width:100%; margin-top: 15%">
     </div>
   </div>
 </div>
@@ -533,7 +534,7 @@ img {
 
   <div class="w3-quarter">
     <div class="w3-card-4">
-      <img class="materialbox materialboxed" src="01-kuhinja.jpg" style="width:100%; margin-top: 50%">
+      <img class="materialbox materialboxed" src="01-kuhinja.jpg" style="width:100%; margin-top: 15%">
     </div>
   </div>
 
@@ -569,7 +570,7 @@ img {
 
   <div class="w3-quarter">
     <div class="w3-card-4">
-      <img class="materialbox materialboxed"src="04-hodnik-sprat.jpg" style="width:100%; margin-top: 50%">
+      <img class="materialbox materialboxed"src="04-hodnik-sprat.jpg" style="width:100%; margin-top: 15%">
     </div>
   </div>
 </div>
@@ -608,7 +609,7 @@ img {
 
   <div class="w3-quarter">
     <div class="w3-card-4">
-      <img class="materialbox materialboxed"src="02-kancelarija-socijalne-radnice.jpg" style="width:100%; margin-top: 50%">
+      <img class="materialbox materialboxed"src="02-kancelarija-socijalne-radnice.jpg" style="width:100%; margin-top: 15%">
     </div>
   </div>
 
@@ -620,7 +621,7 @@ img {
 
   <div class="w3-quarter">
     <div class="w3-card-4">
-      <img class="materialbox materialboxed" src="03-soba-medicinskog-osoblja.jpg" style="width:100%; margin-top: 50%">
+      <img class="materialbox materialboxed" src="03-soba-medicinskog-osoblja.jpg" style="width:100%; margin-top: 15%">
     </div>
   </div>
 </div>
@@ -641,6 +642,11 @@ img {
 var elems = document.querySelectorAll('.materialboxed');
 var instances = M.Materialbox.init(elems, 200);
 });
+
+</script>
+</body>
+</html>
+
 
 </script>
 </body>
