--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@ img {
 <body>
     <div class="topnav" id="myTopnav">
         <a class="active" style="background-color: black"><img src="https://github.com/greeenCloud/fenix/blob/main/logo.png?raw=true"></a>
-        <a href="fenix.html" class="active" style="background-color: #004d00;">Početna</a>
-        <a href="oNama.html">O nama</a>
-        <a href="usluge.html">Usluge</a>
-        <a href="kontakt.html">Kontakt</a>
-        <a href="galerija.html">Galerija</a><br>
+        <a href="https://greeencloud.github.io/fenix/" class="active" style="background-color: #004d00;">Početna</a>
+        <a href="https://greeencloud.github.io/fenix/oNama.html">O nama</a>
+        <a href="https://greeencloud.github.io/fenix/usluge.html">Usluge</a>
+        <a href="https://greeencloud.github.io/fenix/kontakt.html">Kontakt</a>
+        <a href="index.html">Galerija</a><br>
         <a href="" title="Slovakian"><img src="https://github.com/greeenCloud/fenix/blob/main/slovakia.jpg?raw=true" class="w3-circle"></a>
         <a href="" title="Russian"><img src="https://github.com/greeenCloud/fenix/blob/main/russian.jpg?raw=true" class="w3-circle"></a>
         <a href="" title="English"><img src="https://github.com/greeenCloud/fenix/blob/main/english.jpg?raw=true" class="w3-circle"></a>
