--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ img {
         <a href="https://greeencloud.github.io/fenix/oNama.html">O nama</a>
         <a href="https://greeencloud.github.io/fenix/usluge.html">Usluge</a>
         <a href="https://greeencloud.github.io/fenix/kontakt.html">Kontakt</a>
-        <a href="index.html">Galerija</a><br>
+        <a href="">Galerija</a><br>
         <a href="" title="Slovakian"><img src="https://github.com/greeenCloud/fenix/blob/main/slovakia.jpg?raw=true" class="w3-circle"></a>
         <a href="" title="Russian"><img src="https://github.com/greeenCloud/fenix/blob/main/russian.jpg?raw=true" class="w3-circle"></a>
         <a href="" title="English"><img src="https://github.com/greeenCloud/fenix/blob/main/english.jpg?raw=true" class="w3-circle"></a>
@@ -602,29 +602,6 @@ img {
   </div>
 </div>
 
-<div class="w3-row-padding w3-margin-top w3-content">
-  <br>
-  <br>
-  <h3 class="w3-border-top w3-border-bottom w3-border-brown">Kancelarije</h3><br>
-
-  <div class="w3-quarter">
-    <div class="w3-card-4">
-      <img class="materialbox materialboxed"src="02-kancelarija-socijalne-radnice.jpg" style="width:100%; margin-top: 15%">
-    </div>
-  </div>
-
-  <div class="w3-quarter">
-    <div class="w3-card-4">
-      <img class="materialbox materialboxed" src="01-kabinet-direktora.jpg" style="width:100%">
-    </div>
-  </div>
-
-  <div class="w3-quarter">
-    <div class="w3-card-4">
-      <img class="materialbox materialboxed" src="03-soba-medicinskog-osoblja.jpg" style="width:100%; margin-top: 15%">
-    </div>
-  </div>
-</div>
 <br><br><br><br><br>
   
 
