--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>lightbox</title>
+    <title>Galerija - Fenix</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="icon" href="favicon.png">
@@ -223,10 +223,10 @@ img.hover-shadow {
 <body>
     <div class="topnav" id="myTopnav">
       <a style="background-color: black"><img src="https://github.com/greeenCloud/fenix/blob/main/logo.png?raw=true" width="330"></a>
-        <a href="index.html">Početna</a>
-        <a href="oNama.html">O nama</a>
-        <a href="usluge.html">Usluge</a>
-        <a href="kontakt.html">Kontakt</a>
+        <a href="https://greeencloud.github.io/fenix/index.html">Početna</a>
+        <a href="https://greeencloud.github.io/fenix/oNama.html">O nama</a>
+        <a href="https://greeencloud.github.io/fenix/usluge.html">Usluge</a>
+        <a href="https://greeencloud.github.io/fenix/kontakt.html">Kontakt</a>
         <a href="" class="active">Galerija</a><br>
          <a href="" title="English"><img src="https://github.com/greeenCloud/fenix/blob/main/english.jpg?raw=true" class="w3-circle"></a>
         <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a></div>
