--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-
-<!DOCTYPE html>
+ 
+  <!DOCTYPE html>
 <html lang="en">
   
 
@@ -16,13 +16,13 @@
 </head>
 <body>
     <div class="topnav" id="myTopnav">
-      <a style="background-color: black"><img src="logo.png" width="330"></a>
-        <a href="https://greeencloud.github.io/fenix/">Početna</a>
-        <a href="https://greeencloud.github.io/fenix/oNama.html">O nama</a>
-        <a href="https://greeencloud.github.io/fenix/usluge.html">Usluge</a>
-        <a href="https://greeencloud.github.io/fenix/kontakt.html">Kontakt</a>
+      <a style="background-color: black"><img src="logo.png" width="330" style="margin-bottom:0"></a>
+        <a href="index.html">Početna</a>
+        <a href="oNama.html">O nama</a>
+        <a href="usluge.html">Usluge</a>
+        <a href="kontakt.html">Kontakt</a>
         <a href="" class="active">Galerija</a><br>
-         <a href="" title="English"><img src="english.jpg" class="w3-circle"></a>
+         <a href="" title="English"><img src="english.jpg" class="w3-circle" style="margin-bottom: 0; margin-left:6px"></a>
         <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a></div>
     <div class="w3-row w3-center w3-content"><br><br>
         <div class="w3-half">
@@ -684,3 +684,5 @@
       
 </body>
 </html>
+  
+  
